<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/settings_title_units">
        <ListPreference
            android:defaultValue="1"
            android:entries="@array/temperatureUnitsArray"
            android:entryValues="@array/temperatureUnitsValues"
            android:key="temperatureUnit"
            android:summary="@string/settings_summary_temperature"
            android:title="@string/settings_title_temperature" />

        <ListPreference
            android:defaultValue="1"
            android:entries="@array/distanceUnitsArray"
            android:entryValues="@array/distanceUnitsValues"
            android:key="distanceUnit"
            android:summary="@string/settings_summary_distance"
            android:title="@string/settings_title_distance" />
    </PreferenceCategory>

</PreferenceScreen>
