<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorAccent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tutorial_key_link_heading"
            android:textColor="@android:color/white"
            android:textSize="@dimen/slide_title"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="@dimen/img_width_height"
            android:layout_height="@dimen/img_width_height"
            android:background="@drawable/splash_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingLeft="@dimen/desc_padding"
            android:paddingRight="@dimen/desc_padding"
            android:text="@string/tutorial_owm_key"
            android:textAlignment="center"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textSize="@dimen/slide_desc" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tutorial_owm_link"
            android:text="@string/tutorial_owm_link" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/desc_padding"
            android:paddingRight="@dimen/desc_padding"
            android:text="@string/tutorial_owm_2nd_half"
            android:textAlignment="center"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textSize="@dimen/slide_desc" />

        <EditText
            android:hint=">"
            android:paddingTop="20dp"
            android:textColorHint="?attr/inverseTextColor"
            android:textColor="?attr/inverseTextColor"
            android:id="@+id/tutorial_owm_key_field"
            android:paddingHorizontal="40dp"
            android:backgroundTint="?attr/activityBackgroundColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></EditText>

    </LinearLayout>

</RelativeLayout>